--- a/assets/css/Admin-index.css
+++ b/assets/css/Admin-index.css
@@ -30,6 +30,111 @@ header {
   border-radius: 8px;
   margin-bottom: 30px;
 }
+
+/* Các tiêu đề ở Header */
+.nav__link {
+  font-weight: 600;
+  padding: 0.6rem;
+  font-size: 1.05rem;
+  color: #f1f1f1;
+  position: relative;
+  transition: color 0.3s ease;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+}
+
+.nav__link::after {
+  content: "";
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  background: #00bfa6;
+  bottom: 0;
+  left: 0;
+  transition: width 0.3s;
+}
+
+.nav__link:hover::after {
+  width: 100%;
+}
+
+.btn--login {
+  background-color: transparent;
+  color: #f1f1f1;
+  padding: 0.4rem 1.2rem;
+  border-radius: 999px;
+  border: 2px solid #00bfa6;
+  font-weight: 600;
+  font-size: 1rem;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  transition: color 0.3s ease, border-color 0.3s ease;
+}
+
+.btn--login::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background-color: #00bfa6;
+  z-index: -1;
+  transition: width 0.4s ease;
+}
+
+.btn--login:hover::before {
+  width: 100%;
+}
+
+.btn--login:hover {
+  color: #fff;
+  border-color: #00bfa6;
+}
+
+/* ==== Button ==== */
+.btn {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  background: #475569;
+  color: #e2e8f0;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  padding: 0.75rem 2rem;
+  border-radius: 30px;
+  transition: all 0.3s ease;
+  font-weight: 600;
+  font-size: 1.05rem;
+  z-index: 0;
+}
+
+.btn:hover {
+  background: #0f172a;
+  color: #fff;
+  transform: translateY(-2px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.btn::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #0f172a;
+  transform: scaleX(0.01);
+  transform-origin: left;
+  z-index: -1;
+  transition: transform 0.4s ease;
+  border-radius: 30px;
+}
+.btn:hover::after {
+  transform: scaleX(1);
+}
+
 /* TABS */
 .tabs {
   display: flex;
